# pg-viewer

./: .gitignore  README  configure.ac  run.sh
src/: Makefile.am  about.py  about.ui  columns.py  constants.py  databases.py  functions.py  main.py  pg_viewer.py  pg_viewer.ui  schemas.py  sequences.py  servers.py  servers.ui  sql_window.py  sql_window.ui  table_tool_edit.py  table_tool_new.py  table_tool_window.ui  table_view.py  table_view.ui  tables.py  views.py  widgets.py
